@@ -1,3 +1,8 @@
+2006-04-13  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/plaf/metal/MetalDesktopIconUI.java
+	(createUI): Return new instance rather than shared instance.
+
 2006-04-13  Robert Schuster  <robertschuster@fsfe.org>
 
 	* javax/swing/text/FieldView.java:
